spacing issues on mobile

--- a/src/components/BusTable/Buslisting.scss
+++ b/src/components/BusTable/Buslisting.scss
@@ -86,7 +86,7 @@
         li{width:24%;height: 140px; float:left;}
         li.dine, li.serve{float:left;}
         
-        button {font-size:27.5px; margin-top: 50px;}
+        button {font-size:24px; margin-top: 50px;}
         li::before{background-color: rgba($black,.4)}
       }
     }
@@ -102,7 +102,7 @@
   }
 
   @include bp(mb) {
-    .BusListHead .filterList li button {font-size:24px;}
+    .BusListHead .filterList li button {font-size:21px;}
 
     .BusListBody .medDef{width:90%;}
     .filterContent {
