--- a/src/hoc/Pages/Home/Home.scss
+++ b/src/hoc/Pages/Home/Home.scss
@@ -136,5 +136,9 @@
     h2{bottom:auto; font-size:1.1rem;margin-top:20px;
       span.sign{font-size: 1.8rem;}
     }
+
+    .MsSec .msLink.inline{@include center-block(); width:80%;
+      &:last-child {margin-left: auto;}
+    }
   }
 }
